memo file attachments

--- a/nicnbk-ui-angular2/index.html
+++ b/nicnbk-ui-angular2/index.html
@@ -45,6 +45,10 @@
     <!--ng2-selct-->
     <link rel="stylesheet" href="app/static/css/ng2-select.css"/>
 
+    <!-- file-saver -->
+    <!-- TODO: use as npm module -->
+    <script src="app/static/js/FileSaver.min.js"></script>
+
 
 <!-- Common styles for application -->
     <link rel="stylesheet" href="app/static/css/common.css"/>
