--- a/nicnbk-ui-angular2/_index.html
+++ b/nicnbk-ui-angular2/_index.html
@@ -60,7 +60,7 @@
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <!-- 2. Configure SystemJS -->
-    <script src="systemjs.config.js"></script>
+    <script src="_systemjs.config.js"></script>
     <script>
         System.import('app').catch(function(err){ console.error(err); });
     </script>
