--- a/nicnbk-ui-angular2/src/index.html
+++ b/nicnbk-ui-angular2/src/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- TODO: save and load from resources -->
-    <script type="text/javascript" src="public/js/google-charts/loader.js"></script>
+    <!--<script type="text/javascript" src="public/js/google-charts/loader.js"></script>-->
+    <!--<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>-->
 
 </head>
 <body>
